--- a/CNN/HighPerformanceComputing/各种指令集.md
+++ b/CNN/HighPerformanceComputing/各种指令集.md
@@ -1,25 +1,48 @@
 # 8为整数
 ##  加法
 ```c
-SIMD            Code                                Input             Output
-8-bit unsigned/signed (unless specified otherwise)
-MMX(64-bit)   d = _m_paddb(a, b)                 __m64 a, b;         __m64 d;   
-              d = _mm_add_pi8(a, b)
+SIMD指令          Code代码                          Input输入            Output输出
 
-SSE2(128-bit) d = _mm_add_epi8(a, b) __m128i a, b; __m128i d;
-AVX(256-bit) d = _mm256_add_epi8(a, b) __m256i a, b; __m256i d;
-NEON (64-bit) d = vadd_u8(a, b) uint8x8_t a, b; uint8x8_t d;
-NEON (128-bit) d = vaddq_u8(a, b) uint8x16_t a, b; uint8x16_t d;
-AltiVec/VMX d = vec_add(a, b)
-d = vec_vaddubm(a, b)
-vector uint8_t a, b; vector uint8_t d;
-VSX1 d = vec_add(a, b)
-d = vec_vaddubm(a, b)
-vector uint8_t a, b; vector uint8_t d;
-8-bit signed
-NEON (64-bit) d = vadd_s8(a, b) int8x8_t a, b; int8x8_t d;
-NEON (128-bit) d = vaddq_s8(a, b) int8x16_t a, b; int8x16_t d;
+ ======8-bit unsigned/signed (unless specified otherwise)============
+MMX(64-bit)    d = _m_paddb(a, b)                 __m64 a, b;           __m64 d;   
+               d = _mm_add_pi8(a, b)
+
+SSE2(128-bit)  d = _mm_add_epi8(a, b)             __m128i a, b;         __m128i d;
+AVX(256-bit)   d = _mm256_add_epi8(a, b)          __m256i a, b;         __m256i d;
+NEON (64-bit)  d = vadd_u8(a, b)                  uint8x8_t a, b;       uint8x8_t d;
+NEON (128-bit) d = vaddq_u8(a, b)                 uint8x16_t a, b;      uint8x16_t d;
+AltiVec/VMX    d = vec_add(a, b)
+               d = vec_vaddubm(a, b)              vector uint8_t a, b;  vector uint8_t d;
+VSX1           d = vec_add(a, b)
+               d = vec_vaddubm(a, b)              vector uint8_t a, b;  vector uint8_t d;
+==================8-bit signed============================
+NEON (64-bit)   d = vadd_s8(a, b)                  int8x8_t a, b;        int8x8_t d;
+NEON (128-bit)  d = vaddq_s8(a, b)                 int8x16_t a, b;       int8x16_t d;
 AltiVec/VMX/VSX d = vec_add(a, b)
-d = vec_vaddubm(a, b)
-vector int8_t a, b; vector int8_t d;
+                d = vec_vaddubm(a, b)              vector int8_t a, b;   vector int8_t d;
+```
+>汇编格式
+```asm
+SIMD              Code              Description                Notes
+======8-bit unsigned/signed (unless specified otherwise)========
+MMX(64-bit)    paddb mm1, mm2         Adds mm1, mm2,
+                                      result in mm1             mm1, mm2 are 64-bit MMX registers
+SSE2(128-bit)  paddb xmm1, xmm2       Adds xmm1, xmm2,
+                                      result in xmm1            xmm1, xmm2 are SSE 128-bit registers
+AVX(128-bit) vpaddb xmm1, xmm2, xmm3  Adds xmm2, xmm3,
+                                      result xmm1               xmm1, xmm2, xmm3 are AVX 128-bit registers
+AVX(256-bit) vpaddb ymm1, ymm2, ymm3  Adds ymm2, ymm3,
+                                      result in ymm1            ymm1, ymm2, ymm3 are AVX 256-bit registers
+NEON (64-bit) vadd.i8 d1, d2, d3      Adds d2, d3, 
+                                      result ind1               d1,d2,d3 are 64-bit NEON registers
+NEON (128-bit) vaddq.i8 q1, q2, q3    Adds q2, q3, 
+                                      result in q1              q1,q2,q3 are 128-bit NEON registers
+ARMv8 NEON (64-bit) 
+            add Vd.8B, Vn.8B, Vm.8B   Adds Vn.8B, Vm.8B,
+                                      result in Vd.8B           d1,d2,d3 are 64-bit  NEON registers
+ARMv8 NEON (128-bit) 
+          add Vd.16B, Vn.16B, Vm.16B  Adds Vn.16B, Vm.16B,
+                                      result in Vd.16B          Vn.16B, Vm.16B, Vd.16B are 128-bit NEON registers
+AltiVec/VMX/VSX vaddubm vD, vA, vB    Adds vA, vB, 
+                                      result in vD              vA, vB, vD are VMX 128-bit integer registers
 ```
