--- a/CNN/HighPerformanceComputing/各种指令集.md
+++ b/CNN/HighPerformanceComputing/各种指令集.md
@@ -21,9 +21,9 @@ NEON (128-bit)  d = vaddq_s8(a, b)                 int8x16_t a, b;       int8x16
 AltiVec/VMX/VSX d = vec_add(a, b)
                 d = vec_vaddubm(a, b)              vector int8_t a, b;   vector int8_t d;
 ```
->汇编格式
+>**汇编格式**
 ```asm
-SIMD              Code              Description                Notes
+SIMD指令          Code代码              Description描述            Notes笔记
 ======8-bit unsigned/signed (unless specified otherwise)========
 MMX(64-bit)    paddb mm1, mm2         Adds mm1, mm2,
                                       result in mm1             mm1, mm2 are 64-bit MMX registers
@@ -45,4 +45,10 @@ ARMv8 NEON (128-bit)
                                       result in Vd.16B          Vn.16B, Vm.16B, Vd.16B are 128-bit NEON registers
 AltiVec/VMX/VSX vaddubm vD, vA, vB    Adds vA, vB, 
                                       result in vD              vA, vB, vD are VMX 128-bit integer registers
+```
+>**示例**
+```c
+
+
+
 ```
