--- a/CNN/HighPerformanceComputing/各种指令集.md
+++ b/CNN/HighPerformanceComputing/各种指令集.md
@@ -1,5 +1,7 @@
-# 8为整数
-##  加法
+# 整数
+## 加法
+###  8位寄存器 加法
+>**c语言格式
 ```c
 SIMD指令          Code代码                          Input输入            Output输出
 
@@ -47,8 +49,23 @@ AltiVec/VMX/VSX vaddubm vD, vA, vB    Adds vA, vB,
                                       result in vD              vA, vB, vD are VMX 128-bit integer registers
 ```
 >**示例**
+c语言格式
 ```c
+// SSE (128-bit) 8*16=128bits
+__m128i a = _mm_set_epi8(0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15);
+__m128i b = _mm_set_epi8(15, 14, 13, 12, 11, 10, 9, 8, 7, 6, 5, 4, 3, 2, 1, 0);
+__m128i d = _mm_add_epi8(a, b);
 
+// NEON (128-bit)
+uint8x16_t a = {0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15};
+uint8x16_t b = {15, 14, 13, 12, 11, 10, 9, 8, 7, 6, 5, 4, 3, 2, 1, 0};
+uint8x16_t d = vaddq_u8(a, b);
 
+// AltiVec/VMX
+vector uint8_t a = {0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15};
+vector uint8_t b = {15, 14, 13, 12, 11, 10, 9, 8, 7, 6, 5, 4, 3, 2, 1, 0};
+vector uint8_t d = vec_add(a, b);
 
 ```
+###  16位寄存器 加法
+
