--- a/CNN/HighPerformanceComputing/快速矩阵乘法.md
+++ b/CNN/HighPerformanceComputing/快速矩阵乘法.md
@@ -1,6 +1,8 @@
 # 矩阵乘法 快速矩阵乘法
 [快速矩阵乘法 参考](http://hongbomin.com/2016/07/19/fast-matrix-multiplication/)
 
+[课程pdf参考](http://www.cs.tau.ac.il/~zwick/Adv-Alg-2015/Matrix-Graph-Algorithms.pdf)
+
     矩阵乘法是高性能计算以及深度学习的基石之一，矩阵乘法的优化一直是相关业界的关注重点.
 ![](http://hongbomin.com/2017/09/02/ncnn-analysis/gemm.png)
 
