--- a/CNN/HighPerformanceComputing/快速矩阵乘法.md
+++ b/CNN/HighPerformanceComputing/快速矩阵乘法.md
@@ -6,6 +6,10 @@
     矩阵乘法是高性能计算以及深度学习的基石之一，矩阵乘法的优化一直是相关业界的关注重点.
 ![](http://hongbomin.com/2017/09/02/ncnn-analysis/gemm.png)
 
+卷积原理:卷积的基本操作就是这样的：这仅是单通道的计算，多通道类似。
+
+![](https://upload-images.jianshu.io/upload_images/4749583-81a17264a4845675.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/331)
+
 # 1. 最简单的矩阵乘法实现，时间复杂度为O^3
 ```c
 static void mm_generate(float* matA,float* matB,float* matC,const int M,const int N,const int K,const int strideA,const int strideB,const int strideC)
