--- a/CNN/HighPerformanceComputing/快速矩阵乘法.md
+++ b/CNN/HighPerformanceComputing/快速矩阵乘法.md
@@ -10,6 +10,13 @@
 
 ![](https://upload-images.jianshu.io/upload_images/4749583-81a17264a4845675.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/331)
 
+img2col,转换成连续存储
+
+![](https://upload-images.jianshu.io/upload_images/4749583-02b9e930d2631524.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1000)
+每一步的卷积都提前给转换好，放到连续的内存中来， 但是有大量的冗余内存单元被放进来了，这就是典型的空间换时间的例子。
+
+
+
 # 1. 最简单的矩阵乘法实现，时间复杂度为O^3
 ```c
 static void mm_generate(float* matA,float* matB,float* matC,const int M,const int N,const int K,const int strideA,const int strideB,const int strideC)
