--- a/CNN/HighPerformanceComputing/快速矩阵乘法.md
+++ b/CNN/HighPerformanceComputing/快速矩阵乘法.md
@@ -1,4 +1,4 @@
-# 矩阵乘法 快速矩阵乘法
+# 卷积运算，矩阵乘法 快速矩阵乘法
 [快速矩阵乘法 参考](http://hongbomin.com/2016/07/19/fast-matrix-multiplication/)
 
 [课程pdf参考](http://www.cs.tau.ac.il/~zwick/Adv-Alg-2015/Matrix-Graph-Algorithms.pdf)
@@ -15,6 +15,12 @@ img2col,转换成连续存储
 ![](https://upload-images.jianshu.io/upload_images/4749583-02b9e930d2631524.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1000)
 每一步的卷积都提前给转换好，放到连续的内存中来， 但是有大量的冗余内存单元被放进来了，这就是典型的空间换时间的例子。
 
+具体转换算法,如图中的红色蓝色框所示，以这种间隔(各行各列采样)的方式按行存储原始数据，最终得到的就是每个卷积区域都转换成一列了，也就是线性的了。
+
+![](https://upload-images.jianshu.io/upload_images/4749583-9005ae14104ebb24.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/731)
+
+	首先左上角 3*3卷积核 排成一列，放入目标矩阵的第一列，
+	目标矩阵的每一行的起始元素以第一列的对应行元素，在原始矩阵中开始各行隔列采样(不包含第一列，起始元素除外)放入目标矩阵的每一行。
 
 
 # 1. 最简单的矩阵乘法实现，时间复杂度为O^3
