--- a/CNN/HighPerformanceComputing/快速矩阵乘法.md
+++ b/CNN/HighPerformanceComputing/快速矩阵乘法.md
@@ -21,6 +21,34 @@ img2col,转换成连续存储
 
 	首先左上角 3*3卷积核 排成一列，放入目标矩阵的第一列，
 	目标矩阵的每一行的起始元素以第一列的对应行元素，在原始矩阵中开始各行隔列采样(不包含第一列，起始元素除外)放入目标矩阵的每一行。
+	
+img2col的优缺点
+
+    优点
+    cache性能好很多
+
+    缺点
+    很明显啊，内存占用大大增加了啊，上图中原始图大小是7x7，转换后为9x9，也就是说内存占用多了65%啊！
+
+全连接：
+
+![](https://upload-images.jianshu.io/upload_images/4749583-36cfea187738e72b.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/768)
+
+卷积:
+
+![](https://upload-images.jianshu.io/upload_images/4749583-7800e135418e2bd1.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/768)
+
+三维卷积输出的是二维feature map:
+
+![](https://upload-images.jianshu.io/upload_images/4749583-a3d55b239545dae0.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/768)
+
+按 [kernel_height, kernel_width, kernel_depth] ⇒ 将输入分成 3 维的 patch，并将其展成一维向量:
+
+![](https://upload-images.jianshu.io/upload_images/4749583-a85c6d40515d2011.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/768)
+
+此时的卷积操作就可转化为矩阵乘法:
+
+![](https://upload-images.jianshu.io/upload_images/4749583-7f45f85e08689a37.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/768)
 
 
 # 1. 最简单的矩阵乘法实现，时间复杂度为O^3
