--- a/CNN/HighPerformanceComputing/快速矩阵乘法.md
+++ b/CNN/HighPerformanceComputing/快速矩阵乘法.md
@@ -3,6 +3,8 @@
 
 [课程pdf参考](http://www.cs.tau.ac.il/~zwick/Adv-Alg-2015/Matrix-Graph-Algorithms.pdf)
 
+[参考2 从winograd原理到实现及汇编优化 ](https://www.jianshu.com/p/4907e6c93452)
+
     矩阵乘法是高性能计算以及深度学习的基石之一，矩阵乘法的优化一直是相关业界的关注重点.
 ![](http://hongbomin.com/2017/09/02/ncnn-analysis/gemm.png)
 
@@ -48,10 +50,12 @@ img2col的优缺点
 
 此时的卷积操作就可转化为矩阵乘法:
 
-![](https://img-blog.csdn.net/20170708170241163?watermark/2/text/aHR0cDovL2Jsb2cuY3Nkbi5uZXQvbGFuY2h1bmh1aQ==/font/5a6L5L2T/fontsize/400/fill/I0JBQkFCMA==/dissolve/70/gravity/SouthEast)
+![](https://upload-images.jianshu.io/upload_images/4749583-7f45f85e08689a37.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/768)
+
+[参考 卷积操作中的矩阵乘法（gemm）](https://petewarden.com/2015/04/20/why-gemm-is-at-the-heart-of-deep-learning/)
 
 
-# 1. 最简单的矩阵乘法实现，时间复杂度为O^3
+# 1. 最简单的矩阵乘法实现，时间复杂度为O(n^3) = O(n^(log2(8))) 
 ```c
 static void mm_generate(float* matA,float* matB,float* matC,const int M,const int N,const int K,const int strideA,const int strideB,const int strideC)
 {
@@ -174,9 +178,12 @@ static void mm_split(float* matA, float* matB, float* matC, const int M, const i
 ```
 
 
-# 3. Strassen 算法，时间复杂度是O^2.81
+# 3. Strassen 算法，时间复杂度是O(n^2.807) = O(n^(log2(7)))
 [Strassen 维基百科](https://en.wikipedia.org/wiki/Strassen_algorithm)
-9752)
+
+Strassen算法仅仅比通用矩阵相乘算法好一点，因为通用矩阵相乘算法时间复杂度是: O(n^(log2(8)))  
+
+但随着n的变大，比如当n >> 100时，Strassen算法是比通用矩阵相乘算法变得更有效率  
 
 ```c
 static void mm_strassen(float* matA, float* matB, float* matC, const int M, const int N, const int K, const int strideA, const int strideB, const int strideC)
@@ -379,6 +386,18 @@ static void mm_strassen(float* matA, float* matB, float* matC, const int M, cons
 
 # 4.  Coppersmith-Winograd算法，时间复杂度是O^2.38
 [Coppersmith-Winograd算法 维基百科](https://en.wikipedia.org/wiki/Coppersmith%E2%80%93Winograd_algorithm)
+
+
+在ncnn的convolution_3x3.h文件中 conv3x3s1_winograd64_neon4(const Mat& bottom_blob, Mat& top_blob, const Mat& kernel_tm, const Mat& _bias) 实现了winograd算法 的 neon 优化。
+
+步骤如下：
+
+    1. 首先把输出通道按照6x6的大小做补齐，使得整体的大小为6x6的整数倍，填充后的输出再加一层padding。
+    2. 第二步就是处理底层feature map层了。
+	//把底层复制成扩展后的输出层+边的大小,空出来的地方填充V值。
+	copy_make_border(bottom_blob, bottom_blob_bordered, 0, h - bottom_blob.h, 0, w - bottom_blob.w, 0, 0.f);
+	
+       首先把输出做tile操作，也就是把每个6x6扩大到8x8，此时得到w_tm = outw / 6 * 8、h_tm = outh / 6 * 8
 
 ```c
 static void mm_winograd(float* matA, float* matB, float* matC, const int M, const int N, const int K, const int strideA, const int strideB, const int strideC)
